[project]
name = "llm-engineering-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv",
    "pydantic",
    "pydantic-core",
    "pydantic-settings",
    "langchain",
    "langchain-anthropic",
    "langchain-community",
    "langchain-core",
    "langchain-google-genai",
    "langchain-groq",
    "langchain-openai",
    "rich",
    "rich-cli"
]
